--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -1,18 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="ソース ファイル">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="ヘッダー ファイル">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Externals">
       <UniqueIdentifier>{4a863a72-ff1f-460f-9840-3ea3ebb8c64f}</UniqueIdentifier>
     </Filter>
@@ -186,6 +174,9 @@
     </Filter>
     <Filter Include="Feature\CSV">
       <UniqueIdentifier>{041acee4-5bdd-4267-9204-84c9d7b43c7c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utility\DIContainer">
+      <UniqueIdentifier>{d915672d-7d9f-4795-8ba7-1995c72af4b5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -505,6 +496,9 @@
     </ClInclude>
     <ClInclude Include="Features\CSV\csvStructure\CSVData.h">
       <Filter>Feature\CSV</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\DIContainer\DIContainer.h">
+      <Filter>Utility\DIContainer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
