--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,18 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=171,654
-Size=714,248
+Pos=171,817
+Size=714,85
 Collapsed=0
 
 [Window][Objects]
-Pos=4,78
-Size=169,834
+Pos=1001,-3
+Size=169,300
 Collapsed=0
 
 [Window][デバッグ]
-Pos=1163,1
-Size=432,853
+Pos=1169,-3
+Size=432,906
 Collapsed=0
 
 [Window][SRVManager]
