--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,24 +4,29 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=-1,720
-Size=1282,182
-Collapsed=0
+Pos=-2,664
+Size=1266,236
+Collapsed=1
 
 [Window][Objects]
-Pos=1113,-3
-Size=169,361
-Collapsed=0
+Pos=1137,0
+Size=127,665
+Collapsed=1
 
 [Window][デバッグ]
-Pos=1280,-3
-Size=321,906
-Collapsed=0
+Pos=1264,0
+Size=339,906
+Collapsed=1
 
 [Window][SRVManager]
-Pos=515,257
+Pos=726,451
 Size=373,177
 Collapsed=0
+
+[Window][GameWindow]
+Pos=0,1
+Size=1136,668
+Collapsed=1
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
