--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,19 +4,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=-2,664
-Size=1266,236
-Collapsed=1
+Pos=-2,649
+Size=1266,251
+Collapsed=0
 
 [Window][Objects]
 Pos=1137,0
-Size=127,665
-Collapsed=1
+Size=127,648
+Collapsed=0
 
 [Window][デバッグ]
 Pos=1264,0
 Size=339,906
-Collapsed=1
+Collapsed=0
 
 [Window][SRVManager]
 Pos=726,451
@@ -24,9 +24,14 @@ Size=373,177
 Collapsed=0
 
 [Window][GameWindow]
-Pos=0,1
-Size=1136,668
-Collapsed=1
+Pos=-51,-3
+Size=18,27
+Collapsed=0
+
+[Window][SceneManager]
+Pos=303,529
+Size=571,63
+Collapsed=0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
