DirectX12のリソース管理とメモリ管理の改善
## DirectX12.cpp
- `#ifdef _DEBUG` ブロック内に `#include <imgui_impl_dx12.h>` を追加
- `PresentDraw` 関数内でリソースバリアの設定方法を `SetResourceBarrier` から `DX12Helper::ChangeStateResource` に変更
- `PostDraw` 関数内でリソースバリアの設定コードをコメントアウトし、`swapChain_->Present` のコメントを追加
- `CopyRTV` 関数を `CopyFromRTV` にリネームし、リソースバリアの設定方法を `ChangeStateRTV` と `DX12Helper::ChangeStateResource` に変更

## DirectX12.h
- `CopyRTV` 関数を `CopyFromRTV` にリネーム
- `WaitForGPU` と `ChangeStateRTV` 関数を追加
- `GetGameScreenResource` と `GetGameScreenComputed` のゲッター関数を追加
- `gameScreenResource_` と `gameScreenComputed_` のメンバ変数を追加

## DirectX12_Impl.cpp
- `CreateGameScreenResource` 関数内で UAV の生成コードを追加

## DX12Helper.cpp
- `ChangeStateResource` 関数を新たに追加し、リソースステートの変更を行うように

## DX12Helper.h
- `ChangeStateResource` 関数の宣言を追加

## SRVManager.cpp
- `CreateForUAV` 関数を新たに追加し、UAV の生成を行うように

## SRVManager.h
- `CreateForUAV` 関数の宣言を追加

## WinSystem.cpp
- `isResized_` フラグを追加し、`WM_SIZE` メッセージを処理するように

## WinSystem.h
- `IsResized` 関数を追加し、`isResized_` フラグを管理するように

## DebugManager.cpp
- `ShowDockSpace` 関数を追加し、ImGui のドッキングを有効に

## DebugManager.h
- `EnableDocking` 関数の宣言を追加

## ImGuiManager.cpp
- `EnableDocking` 関数を呼び出すコードを追加

## Engine.vcxproj
- 新しいファイル `Viewport.cpp` と `Viewport.h` を追加
- `WithoutAlpha.CS.hlsl` シェーダーファイルを追加

## Engine.vcxproj.filters
- 新しいフィルター `Viewport` を追加し、関連するファイルをフィルターに追加

## Audio.cpp と Audio.h
- `std::unique_ptr` を使用してメモリ管理を改善
- `SoundData` 構造体の `pBuffer` を `std::unique_ptr<BYTE[]>` に変更
- `LoadWave` 関数で `new` を使用せず、`std::make_unique` を使用
- `Unload` 関数で `delete` を使用せず、`reset` を使用
- `PlayWave` 関数で `pBuffer.get()` を使用してポインタを取得

## Collider.h
- `GetCollisionMask` 関数で `pCollisionMask_` が `nullptr` の場合にデフォルト値 `0xffffffff` を返すように変更
- `pCollisionMask_` を `new` で初期化せず、`nullptr` に変更

## AABB.cpp と AABB.h
- `lines` を `std::unique_ptr<Line>` に変更し、メモリ管理を改善

## OBB.cpp と OBB.h
- `lines` を `std::unique_ptr<Line>` に変更し、メモリ管理を改善

## SceneManager.cpp と SceneManager.h
- `pCurrentScene_` を `std::unique_ptr<IScene>` に変更し、メモリ管理を改善


--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Features\Sprite\SpriteSystem.cpp" />
     <ClCompile Include="Features\Text\Text.cpp" />
     <ClCompile Include="Features\Text\TextSystem.cpp" />
+    <ClCompile Include="Features\Viewport\Viewport.cpp" />
     <ClCompile Include="Framework\NimaFramework.cpp" />
     <ClCompile Include="Utility\FilePathSearcher\FilePathSearcher.cpp" />
   </ItemGroup>
@@ -238,6 +239,7 @@
     <ClInclude Include="Features\Sprite\SpriteSystem.h" />
     <ClInclude Include="Features\Text\Text.h" />
     <ClInclude Include="Features\Text\TextSystem.h" />
+    <ClInclude Include="Features\Viewport\Viewport.h" />
     <ClInclude Include="Framework\NimaFramework.h" />
     <ClInclude Include="Interfaces\IScene.h" />
     <ClInclude Include="Interfaces\ISceneFactory.h" />
@@ -298,6 +300,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Object3d.VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\WithoutAlpha.CS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
