--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -1,22 +1,25 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=366,-3
+Size=756,957
 Collapsed=0
 
 [Window][Log]
-Pos=-2,649
-Size=1266,251
+Pos=0,17
+Size=6,27
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Objects]
-Pos=1137,0
-Size=127,648
+Pos=8,0
+Size=7,32
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][デバッグ]
-Pos=1264,0
-Size=339,906
+Pos=17,0
+Size=15,32
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][SRVManager]
 Pos=726,451
@@ -24,13 +27,18 @@ Size=373,177
 Collapsed=0
 
 [Window][GameWindow]
-Pos=-51,-3
-Size=18,27
+Size=6,27
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][SceneManager]
 Pos=303,529
 Size=571,63
+Collapsed=0
+
+[Window][WindowOverViewport_11111111]
+Pos=0,0
+Size=32,32
 Collapsed=0
 
 [Table][0x3DFC7327,2]
@@ -428,4 +436,13 @@ Column 1  Weight=1.0000
 [Table][0x17C11E58,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
+
+[Docking][Data]
+DockSpace       ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=X
+  DockNode      ID=0x00000005 Parent=0xD5ACB325 SizeRef=1259,900 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1120,900 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1600,652 CentralNode=1 Selected=0xBA965914
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1600,246 Selected=0x64F50EE5
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=137,900 Selected=0x967E7699
+  DockNode      ID=0x00000006 Parent=0xD5ACB325 SizeRef=339,900 Selected=0x435A4E3F
 
