--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -437,6 +437,14 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x0F1C5A8A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3D152174,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace       ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=X
   DockNode      ID=0x00000005 Parent=0xD5ACB325 SizeRef=1259,900 Split=X
