フレームレート計算の改善とDepthSceneの追加
## DirectX12
- `DirectX12.cpp` の `void DirectX12::PostDraw()` メソッドで、フレームレート固定のコードをコメントアウト

## DebugManager
- `DebugManager.cpp` の `void DebugManager::DebugWindowOverall() const` メソッドで、メニュー・タスクバーを避けるためのコメントを削除
- `DebugManager.cpp` の `void DebugManager::MeasureFPS()` メソッドで、フレームレート計算の間隔を2.0秒から0.1秒に変更
- `DebugManager.cpp` の `void DebugManager::DrawUI()` メソッドで、`DebugWindowOverall()` メソッドの呼び出しを有効化

## Model
- `Model.cpp` の `void Model::Initialize(const std::string& _filePath)` メソッドで、モデルデータを読み込むスレッドのラムダ式の位置を変更

## IScene
- `IScene.h` に `NEW_SCENE_IMPL` マクロを追加

## SampleProgram
- `SampleProgram.cpp` の `void SampleProgram::Draw()` メソッドで、`pDirectX_->CopyFromRTV()` の呼び出しをコメントアウト

## SampleProject
- `SampleProject.vcxproj` に `Scene\DepthScene\DepthScene.cpp` と `Scene\DepthScene\DepthScene.h` を追加
- `SampleProject.vcxproj.filters` に `Game\Scene\DepthScene` フィルターを追加し、`Scene\DepthScene\DepthScene.cpp` と `Scene\DepthScene\DepthScene.h` をそのフィルターに含める

## EmptyScene
- `EmptyScene.cpp` に `void EmptyScene::DrawTexts()` メソッドを追加
- `EmptyScene.h` に `void DrawTexts() override;` を追加

## SceneFactory
- `SceneFactory.cpp` に `#include <Scene/DepthScene/DepthScene.h>` を追加し、`DepthScene` のシーン生成を可能に

## imgui
- `imgui.ini` のウィンドウ位置とサイズを変更

## DepthScene
- `DepthScene.cpp` と `DepthScene.h` を新たに追加し、`DepthScene` クラスを定義。このクラスには、シーンの初期化、更新、描画、デバッグウィンドウの表示などのメソッドが含まれる

--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="Game\Scene\Empty">
       <UniqueIdentifier>{352d90bb-cc55-43d0-b199-e968f7902539}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Scene\DepthScene">
+      <UniqueIdentifier>{530a3488-5a08-450e-a0e5-1a76324cded4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -57,6 +60,9 @@
     <ClCompile Include="Scene\Empty\EmptyScene.cpp">
       <Filter>Game\Scene\Empty</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\DepthScene\DepthScene.cpp">
+      <Filter>Game\Scene\DepthScene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SampleProgram\SampleProgram.h">
@@ -76,6 +82,9 @@
     </ClInclude>
     <ClInclude Include="Scene\Empty\EmptyScene.h">
       <Filter>Game\Scene\Empty</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\DepthScene\DepthScene.h">
+      <Filter>Game\Scene\DepthScene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
