--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,20 +4,20 @@ Size=756,957
 Collapsed=0
 
 [Window][Log]
-Pos=0,654
-Size=1120,246
+Pos=0,17
+Size=15,27
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Objects]
-Pos=1122,0
-Size=137,900
+Pos=17,0
+Size=6,32
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][デバッグ]
-Pos=1261,0
-Size=339,900
+Pos=25,0
+Size=7,32
 Collapsed=0
 DockId=0x00000006,0
 
@@ -27,18 +27,18 @@ Size=373,177
 Collapsed=0
 
 [Window][GameWindow]
-Size=6,27
+Size=15,27
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][SceneManager]
-Pos=303,529
-Size=571,63
+Pos=581,493
+Size=571,62
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=32,32
 Collapsed=0
 
 [Table][0x3DFC7327,2]
@@ -446,11 +446,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=1600,900 Split=X
-  DockNode      ID=0x00000005 Parent=0xD5ACB325 SizeRef=1259,900 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1120,900 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1600,652 CentralNode=1 Selected=0xBA965914
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1600,246 Selected=0x64F50EE5
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=137,900 Selected=0x967E7699
-  DockNode      ID=0x00000006 Parent=0xD5ACB325 SizeRef=339,900 Selected=0x435A4E3F
+DockSpace     ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=X
+  DockNode    ID=0x00000003 Parent=0xD5ACB325 SizeRef=1143,900 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1600,652 CentralNode=1 Selected=0xBA965914
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1600,246 Selected=0x64F50EE5
+  DockNode    ID=0x00000004 Parent=0xD5ACB325 SizeRef=455,900 Split=X Selected=0x435A4E3F
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=127,900 Selected=0x967E7699
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=326,900 Selected=0x435A4E3F
 
