Bunny読み込みテスト

--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Game\Scene\DepthScene">
       <UniqueIdentifier>{530a3488-5a08-450e-a0e5-1a76324cded4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Scene\PG3PT1">
+      <UniqueIdentifier>{44b516e0-b4d5-4ca2-bc35-107c620bce15}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -63,6 +66,9 @@
     <ClCompile Include="Scene\DepthScene\DepthScene.cpp">
       <Filter>Game\Scene\DepthScene</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\PG3PT1\PG3PT1.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SampleProgram\SampleProgram.h">
@@ -85,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="Scene\DepthScene\DepthScene.h">
       <Filter>Game\Scene\DepthScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\PG3PT1\PG3PT1.h">
+      <Filter>Game\Scene\PG3PT1</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
