エラーメッセージとログの英語化、シーンマネージャの更新
## DirectX12.cpp
- `Initialize`関数でエラーメッセージを日本語から英語に変更
- `CommandExecute`関数でエラーメッセージを日本語から英語に変更

## DirectX12_Impl.cpp
- `ChooseAdapter`関数でエラーメッセージを日本語から英語に変更
- `CreateCommandResources`関数でログメッセージを日本語から英語に変更
- `CreateSwapChainAndResource`関数でエラーメッセージとログメッセージを日本語から英語に変更
- `CreateFenceAndEvent`関数でエラーメッセージとログメッセージを日本語から英語に変更
- `CreateDirectXShaderCompiler`関数でエラーメッセージとログメッセージを日本語から英語に変更
- `CreateD2D1Factory`関数でエラーメッセージとログメッセージを日本語から英語に変更
- `CreateD3D11Device`関数でエラーメッセージとログメッセージを日本語から英語に変更
- `CreateID2D1DeviceContext`関数でエラーメッセージとログメッセージを日本語から英語に変更
- `CreateD2DRenderTarget`関数でエラーメッセージとログメッセージを日本語から英語に変更

## DX12Helper.cpp
- `CreateDevice`関数でログメッセージを日本語から英語に変更
- `CreateDepthStencilTextureResource`関数でエラーメッセージを日本語から英語に変更
- `CompileShader`関数でログメッセージを日本語から英語に変更

## DebugManager.cpp
- `Window_Log`関数を削除
- `DrawUI`関数から`Window_Log`関数の呼び出しを削除
- `DefaultStyle`関数でウィンドウ背景色の透明度を変更

## Logger.cpp
- ImGuiのヘッダーファイルを追加
- `Initialize`関数でmutexを使用してスレッドセーフに変更
- `Save`関数でログペイロードを保存するように変更
- `DrawUI`関数を追加し、ImGuiを使用してログを表示するように変更
- `Log`関数でmutexを使用してスレッドセーフにし、ログデータを保存するように変更

## Logger.h
- mutexとログペイロードのメンバ変数を追加
- `DrawUI`関数を追加

## ImGui.vcxproj
- UTF-8エンコーディングのオプションを追加

## Model.cpp
- `Initialize`関数でログメッセージを日本語から英語に変更
- `LoadModelTexture`関数でログメッセージを日本語から英語に変更

## NimaFramework.cpp
- `Run`関数でロケールを日本語に設定
- `Initialize`関数でシーンマネージャの初期化を追加
- `Finalize`関数でシーンマネージャの終了処理を追加
- `Update`関数でシーンマネージャの更新処理を追加

## SampleProgram.cpp
- `Initialize`関数でシーンマネージャの初期化を削除
- `Finalize`関数でシーンマネージャの終了処理を削除
- `Update`関数でシーンマネージャの更新処理を削除

## SampleProject.vcxproj.filters
- `PG3PT1.cpp`のフィルタを変更

## PG3PT1.cpp
- ImGuiのヘッダーファイルを追加

## PG3PT1.h
- `isOpen_`メンバ変数を追加

## imgui.ini
- `TestWindow`と`RemoCon`のウィンドウ設定を追加（位置、サイズ、折りたたみ状態）

## DockNode設定
- `ID=0x00000001`の`DockNode`の`Selected`プロパティを`0xBA965914`から`0xEAAD0FDC`に変更

--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -67,7 +67,7 @@
       <Filter>Game\Scene\DepthScene</Filter>
     </ClCompile>
     <ClCompile Include="Scene\PG3PT1\PG3PT1.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>Game\Scene\PG3PT1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
