--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -41,6 +41,16 @@ Pos=0,0
 Size=32,32
 Collapsed=0
 
+[Window][TestWindow]
+Pos=665,194
+Size=168,81
+Collapsed=0
+
+[Window][RemoCon]
+Pos=969,84
+Size=97,64
+Collapsed=0
+
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -448,7 +458,7 @@ Column 1  Weight=1.0000
 [Docking][Data]
 DockSpace     ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=X
   DockNode    ID=0x00000003 Parent=0xD5ACB325 SizeRef=1143,900 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1600,652 CentralNode=1 Selected=0xBA965914
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1600,652 CentralNode=1 Selected=0xEAAD0FDC
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1600,246 Selected=0x64F50EE5
   DockNode    ID=0x00000004 Parent=0xD5ACB325 SizeRef=455,900 Split=X Selected=0x435A4E3F
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=127,900 Selected=0x967E7699
