デバッグ機能の強化とビューポートの修正
## DirectX12_Impl.cpp
- `DirectX12::SetViewportAndScissorRect()` メソッドで、ビューポートの `TopLeftX` の値を `9` から `130` に変更

## DebugManager.cpp
- `DebugManager` クラスのコンストラクタで、`DebugWindowOverall` メソッドを `OverlayFPS` メソッドに置き換え
- `MeasureFrameTime` メソッドを追加し、フレームタイムの計測を実装
- `DeleteComponent` メソッドの後に `Update` メソッドを追加し、`MeasureFrameTime` と `MeasureFPS` を呼び出すように変更
- `DrawUI` メソッドで、`DebugWindowOverall` を `DebugInfoBar` に置き換え
- `DebugInfoBar` メソッドを追加し、FPS とフレームタイムの情報を表示

## DebugManager.h
- `Update` メソッドと `OverlayFPS` メソッドを追加
- `DrawGameWindow` メソッドを再追加
- `MeasureFrameTime` メソッドを追加

## ModelManager.h
- `std::mutex` を追加し、`InqueueUpload` メソッドでスレッドセーフな操作を実装

## NimaFramework.cpp
- `NimaFramework::Update` メソッドで、`pDebugManager_->Update()` を追加

## NimaFramework.h
- `CREATE_APPLICATION` マクロで、変数名を `pSampleProgram` から `program` に変更

## GameScene.cpp
- `GameScene::Initialize` メソッドで、`pFirework_->Initialize` の引数を `Triangle/Triangle.obj` から `Box/Box.obj` に変更

## imgui.ini
- ウィンドウ位置とサイズを変更し、`DebugInfoBar` ウィンドウを追加

## 新規追加ファイル
- `Box.json` ファイルを追加し、花火のエミッタ設定を記述
- `Box.mtl` ファイルを追加し、マテリアル設定を記述
- `Box.obj` ファイルを追加し、ボックスの3Dモデルデータを記述

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,22 +4,22 @@ Size=756,957
 Collapsed=0
 
 [Window][Log]
-Pos=0,17
-Size=15,27
+Pos=17,25
+Size=6,27
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Objects]
-Pos=17,0
-Size=6,32
+Pos=0,17
+Size=15,27
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][デバッグ]
-Pos=25,0
-Size=7,32
+Pos=25,17
+Size=7,27
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000004,0
 
 [Window][SRVManager]
 Pos=726,451
@@ -32,8 +32,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][SceneManager]
-Pos=581,493
-Size=571,62
+Pos=388,556
+Size=581,64
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
@@ -50,6 +50,12 @@ Collapsed=0
 Pos=969,84
 Size=97,64
 Collapsed=0
+
+[Window][DebugInfoBar]
+Pos=0,0
+Size=32,15
+Collapsed=0
+DockId=0x00000006,0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
@@ -455,12 +461,18 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0xEB8DF3AA,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace     ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=X
-  DockNode    ID=0x00000003 Parent=0xD5ACB325 SizeRef=1143,900 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1600,652 CentralNode=1 Selected=0xEAAD0FDC
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1600,246 Selected=0x64F50EE5
-  DockNode    ID=0x00000004 Parent=0xD5ACB325 SizeRef=455,900 Split=X Selected=0x435A4E3F
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=127,900 Selected=0x967E7699
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=326,900 Selected=0x435A4E3F
+DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y
+  DockNode        ID=0x00000006 Parent=0xD5ACB325 SizeRef=1600,32 HiddenTabBar=1 Selected=0x8EDA8100
+  DockNode        ID=0x00000009 Parent=0xD5ACB325 SizeRef=1600,866 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=127,900 Selected=0x967E7699
+    DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=1471,900 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1121,900 Split=Y
+        DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1600,604 CentralNode=1 Selected=0xEAAD0FDC
+        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1600,260 Selected=0x64F50EE5
+      DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=348,900 Selected=0x435A4E3F
 
