DirectX12とUIの改善およびリファクタリング
## DirectX12.cpp
- `DirectX12::CopyFromRTV` メソッドで `viewport_` プロパティを使用するように変更
- `ClearRenderTargetView` の呼び出しを有効化

## DirectX12_Impl.cpp
- `DirectX12::CreateGameScreenResource` メソッドでリソースの初期状態を `D3D12_RESOURCE_STATE_PIXEL_SHADER_RESOURCE` に変更

## SRVManager.cpp
- `SRVManager::CreateForUAV` メソッドで `uavDesc.Texture2D.MipSlice` を 0 に設定

## DebugManager.cpp
- `DebugManager::DrawUI` メソッドで `DrawGameWindow` のコメントアウトを削除

## WithoutAlpha.CS.hlsl
- グレースケール変換コードを削除し、元のカラー値を出力するように変更

## ModelManager.h
- `Core/DirectX12/DirectX12.h` と `functional` のインクルードを削除

## Viewport.cpp
- `dxcapi.h` のインクルードを削除し、`imgui.h` を追加
- `Viewport::CreateSRV` メソッドでテクスチャフォーマットを `DXGI_FORMAT_R8G8B8A8_UNORM_SRGB` に変更
- `Viewport::CreateUAV` メソッドでUAVのインデックス設定を修正
- `Viewport::Compute` メソッドでリソースステート変更コードを有効化
- `Viewport::DrawWindow` メソッドを追加

## Viewport.h
- `Viewport::DrawWindow` メソッドの宣言を追加

## NimaFramework.cpp
- `#include <clocale>` を追加
- `NimaFramework::Run` メソッドでロケール設定を追加
- `NimaFramework::Initialize` メソッドで `Viewport` の初期化コードを有効化
- `NimaFramework::Update` メソッドで `pViewport_->DrawWindow` の呼び出しを追加

## NimaFramework.h
- `Features/Line/Line.h` のインクルードを削除

## SampleProgram.cpp
- `SampleProgram::Draw` メソッドで `CopyFromRTV` と `Compute` の呼び出しを有効化

## imgui.ini
- ウィンドウ位置とサイズの設定を変更
- 新たに `Viewport` ウィンドウの設定を追加
- 新しいウィンドウとテーブル設定を追加
- ドッキングデータを追加

--- a/SampleProject/EngineResources/imgui.ini
+++ b/SampleProject/EngineResources/imgui.ini
@@ -4,20 +4,20 @@ Size=756,957
 Collapsed=0
 
 [Window][Log]
-Pos=0,25
-Size=15,27
+Pos=17,17
+Size=6,27
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Objects]
-Pos=0,17
-Size=7,27
+Pos=0,0
+Size=15,32
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][デバッグ]
-Pos=17,17
-Size=15,27
+Pos=25,0
+Size=7,27
 Collapsed=0
 DockId=0x00000009,0
 
@@ -27,9 +27,9 @@ Size=373,177
 Collapsed=0
 
 [Window][GameWindow]
-Pos=448,403
-Size=18,27
+Size=15,27
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][SceneManager]
 Pos=465,565
@@ -52,22 +52,16 @@ Size=97,64
 Collapsed=0
 
 [Window][DebugInfoBar]
-Pos=0,0
-Size=32,15
+Pos=17,0
+Size=6,7
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DebugInfo]
-Pos=17,30
-Size=15,27
+Pos=25,28
+Size=7,27
 Collapsed=0
 DockId=0x0000000A,0
-
-[Window][Viewport]
-Pos=9,17
-Size=6,27
-Collapsed=0
-DockId=0x00000006,0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
@@ -481,28 +475,16 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
-[Table][0x4CA3CC52,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-
-[Table][0xB77C405B,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-
-[Table][0x8C34076F,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-
 [Docking][Data]
-DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y
-  DockNode        ID=0x00000007 Parent=0xD5ACB325 SizeRef=1600,37 HiddenTabBar=1 Selected=0x8EDA8100
-  DockNode        ID=0x00000008 Parent=0xD5ACB325 SizeRef=1600,861 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1249,900 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1600,653 Split=X Selected=0xBA965914
-        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=127,670 Selected=0x967E7699
-        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1120,670 CentralNode=1 Selected=0x13926F0B
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1600,206 Selected=0x64F50EE5
-    DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=349,900 Split=Y Selected=0x435A4E3F
+DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=X
+  DockNode        ID=0x00000005 Parent=0xD5ACB325 SizeRef=128,900 Selected=0x967E7699
+  DockNode        ID=0x00000006 Parent=0xD5ACB325 SizeRef=1470,900 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1120,900 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1600,670 Split=Y Selected=0x967E7699
+        DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=1118,38 HiddenTabBar=1 Selected=0x8EDA8100
+        DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=1118,630 CentralNode=1
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1600,228 Selected=0x64F50EE5
+    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=348,900 Split=Y Selected=0x435A4E3F
       DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=348,770 Selected=0x435A4E3F
       DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=348,128 Selected=0x627D110E
 
