--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -493,6 +493,10 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x0ABE1544,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y
   DockNode        ID=0x00000007 Parent=0xD5ACB325 SizeRef=1600,37 HiddenTabBar=1 Selected=0x8EDA8100
