DirectX12: コマンドリスト管理の改善と描画処理の最適化
## DirectX12::CommandExecute
- `Microsoft::WRL::ComPtr<ID3D12CommandList>` を `std::vector<ID3D12CommandList*>` に変更。
- コマンドリストをリストに追加するループを追加。
- `commandQueue_->ExecuteCommandLists` の呼び出しを動的に変更。

## DirectX12::DisplayFrame
- `CopyFromRTV` 関数の引数に `ID3D12GraphicsCommandList* _commandList` を追加。

## DirectX12::CopyFromRTV
- コマンドリストの操作を引数の `_commandList` を使用するように変更。

## DirectX12::ChangeStateRTV
- コマンドリストの操作を引数の `_commandList` を使用するように変更。

## DirectX12.h
- `ChangeStateRTV` と `CopyFromRTV` の関数宣言を更新。
- 新しいゲッター関数とセッター関数を追加。

## DX12Helper.cpp
- `CommandListCommonSetting` 関数を追加。

## SRVManager.h
- `SetGraphicsRootDescriptorTable` 関数を `public` セクションに移動。

## DebugManager.cpp
- `GetGameWindowRect` を `GetViewport` に変更。

## Engine.vcxproj と Engine.vcxproj.filters
- 新しいファイルの追加。
- 新しいフィルターの追加。

## Model.cpp と Model.h
- `Draw` 関数の引数に `ID3D12GraphicsCommandList* _commandList` を追加。

## Object3d.cpp
- `Draw` 関数でデバッグモードとリリースモードの処理を分岐。

## Object3dSystem.cpp と Object3dSystem.h
- `Initialize` 関数に `CreateCommandList` の呼び出しを追加。
- `DrawCall` 関数と `Sync` 関数を追加。

## Sprite.cpp
- `Draw` 関数でデバッグモードとリリースモードの処理を分岐。

## SpriteSystem.cpp と SpriteSystem.h
- `SpriteSystem` クラスのコンストラクタとデストラクタを削除。
- `ObjectSystemBase` クラスを継承し、`Initialize` メソッドで `ObjectSystemBase::Initialize` を呼び出すように変更。
- `DrawCall` と `Sync` メソッドを追加。

## Text.cpp
- `SetPosition` メソッドで `GetGameWindowRect` を `GetViewport` に変更。

## Viewport.cpp
- `Initialize` メソッドと `DrawWindow` メソッドで `GetGameWindowRect` を `GetViewport` に変更。

## NimaFramework.cpp と NimaFramework.h
- `Draw` メソッドをデバッグモードとリリースモードで分け、リリースモードでは `DrawHighPerformance` メソッドを呼び出すように変更。
- `Initialize` メソッドでコマンドリストを追加する処理を追加。
- `DrawHighPerformance` メソッドを追加。

## SampleProgram.cpp と SampleProgram.h
- `Initialize` メソッドでシーンの予約を `PG3PT1` から `GameScene` に変更。
- `Draw` メソッドで描画後処理を追加。
- `DrawHighPerformance` メソッドを追加。

## CG3PT2.cpp
- `Initialize` メソッドで `GetGameWindowRect` を `GetViewport` に変更。

## imgui.ini
- ウィンドウ位置やサイズの設定を変更。

## ObjectSystemBase.cpp と ObjectSy

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -128,6 +128,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BaseClasses\ObjectSystemBase.cpp" />
     <ClCompile Include="Common\HRESULT_ASSERT.cpp" />
     <ClCompile Include="Core\DirectX12\BlendMode.cpp" />
     <ClCompile Include="Core\DirectX12\DirectX12.cpp" />
@@ -184,6 +185,8 @@
     <ClCompile Include="Utility\FilePathSearcher\FilePathSearcher.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseClasses\ObjectSystemBase.h" />
+    <ClInclude Include="ClassStyles\SingletonStyle.h" />
     <ClInclude Include="Common\define.h" />
     <ClInclude Include="Common\HRESULT_ASSERT.h" />
     <ClInclude Include="Common\structs.h" />
