--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -32,7 +32,7 @@ Size=18,27
 Collapsed=0
 
 [Window][SceneManager]
-Pos=441,604
+Pos=194,221
 Size=522,63
 Collapsed=0
 
@@ -498,6 +498,18 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xBF37C2C8,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x1A7A8E3E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xF25B79ED,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0ABD5047,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
